# graphRAG

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PROJECT.md  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/plans/: graphrag-system-upgrade.md
.github/workflows/: ci.yml
configs/: default.yaml
eval/: questions.json  run_eval.py
scripts/: build_pipeline.sh
src/: __init__.py  config.py  main.py  utils.py
src/agent/: __init__.py  agent.py
src/document/: __init__.py  chunker.py  loader.py
src/evaluation/: __init__.py
src/extraction/: __init__.py  entity_extractor.py  llm_client.py  prompts.py
src/graph/: __init__.py  builder.py  community.py  summarizer.py
src/retrieval/: __init__.py  dense.py  fusion.py  graph_global.py  graph_local.py  hybrid.py  router.py  sparse.py
tests/: conftest.py  helpers.py
tests/unit/: test_chunker.py  test_config.py  test_fusion.py  test_graph_builder.py  test_llm_client.py  test_llm_client_parser.py  test_llm_protocol.py  test_router.py  test_sparse.py
